--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,21 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-21 Thu 00:16]
+#+CAPTION: Clock summary at [2019-11-21 Thu 19:51]
 | <75>                                   |        |      |      |       |
 | Headline                               | Time   |      |      |     % |
 |----------------------------------------+--------+------+------+-------|
-| *Total time*                           | *4:57* |      |      | 100.0 |
+| *Total time*                           | *6:32* |      |      | 100.0 |
 |----------------------------------------+--------+------+------+-------|
-| Stories                                | 4:57   |      |      | 100.0 |
-| Active                                 |        | 4:57 |      | 100.0 |
-| Edit release notes for previous sprint |        |      | 4:26 |  89.6 |
-| Sprint and product backlog grooming    |        |      | 0:31 |  10.4 |
+| Stories                                | 6:32   |      |      | 100.0 |
+| Active                                 |        | 6:32 |      | 100.0 |
+| Edit release notes for previous sprint |        |      | 6:01 |  92.1 |
+| Sprint and product backlog grooming    |        |      | 0:31 |   7.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Edit release notes for previous sprint                    :story:
     :LOGBOOK:
+    CLOCK: [2019-11-21 Thu 18:30]--[2019-11-21 Thu 19:51] =>  1:21
     CLOCK: [2019-11-21 Thu 00:16]--[2019-11-21 Thu 00:30] =>  0:14
     CLOCK: [2019-11-20 Wed 23:00]--[2019-11-21 Thu 00:15] =>  1:15
     CLOCK: [2019-11-20 Wed 18:49]--[2019-11-20 Wed 19:47] =>  0:58
@@ -39,18 +40,16 @@ Add github release notes for previous sprint.
 
 Title: Dogen v1.0.19, "Impala Cine"
 
-#+begin_src markdown
+#+BEGIN_SRC markdown
 ![Imapala Cine](https://cdn.record.pt/images/2019-02/img_920x519$2019_02_11_02_32_57_1503852.jpg)
 
-_The Impala Cine, Moçâmedes, Namibe, Angola. (C) 2019 [Jornal O Record](https://www.record.pt/modalidades/aventura/detalhe/mocamedes---a-terra-do-faria)_
+_The open air cinema Impala Cine, in the city of Moçâmedes, Namibe, Angola. (C) 2019 [Jornal O Record](https://www.record.pt/modalidades/aventura/detalhe/mocamedes---a-terra-do-faria)_
 
 # Introduction
 
-This sprint was marked by the return to "part-time" development on  Dogen. After a cadence of eight successful 2-week sprints, it was rather difficult to adjust back to the long, drawn-out process of cobbling together a release from whatever spare time one can find. To recap, the target for a "part-time" sprint is to clock around 80 hours worth of work over a rather unpredictable period of time. Most of Dogen has been developed in this fashion but, clearly, it is not ideal fodder for programming.
+Whilst a long time in coming due to our move back into gainful employment, Sprint 19 still managed to pack a punch both in terms of commitment as well as exciting new features. To be fair, we didn't really plan to add _any_ of these features beforehand - instead, we found ourselves having to so in order to progress the real work we _should_ have been focusing on. Alas, nothing ever changes in the life and times of a software developer.
 
-Part-time sprints naturally lend themselves to more fragmentary work, given the typically short duration of the time slots available, and make it much harder to focus on complex tasks that require loading a lot of state into the brain - a process we've described at length in [Nerd Food: Dogen: Lessons in Incremental Coding](https://mcraveiro.blogspot.com/2014/09/nerd-food-dogen-lessons-in-incremental.html). Having said that, not all was gloom and doom with Sprint 19, and much was achieved - both invisible and visible to end-users. Furthermore, efficiency went markedly up after adding a new tool to our arsenal of "motivational tools": the recording coding sessions.
-
-So, brace yourselves for a review of yet another exciting Dogen sprint.
+But lets not dilly-dally. Without further ado, brace yourselves for a review of yet another roller-coaster of a Dogen sprint!
 
 # User visible changes
 
@@ -60,12 +59,12 @@ This section covers stories that affect end users, with the video providing a qu
 
 ## Add support for variability overrides in Dogen
 
-The sprint's key feature is _variability overrides_. It was specifically designed to allow for the overriding of model profiles. In order to understand how the feature came about, we need to revisit a bit of Dogen history. As you may recall, since its early days, Dogen has enabled users to supply meta-data to determine  what source code gets generated for each modeling element - _i.e._, model element _A_ can have say hashing support whereas model element _B_ can have say lexical casting support. These are simple toggles that switch facets on and off.
+The sprint's key feature is _variability overrides_. It was specifically designed to allow for the overriding of model profiles. In order to understand how the feature came about, we need to revisit a fair bit of Dogen history. As you may recall, since early on, Dogen has enabled users to supply meta-data to determine  what source code gets generated for each modeling element. By toggling different meta-data switches, we can express quite differently two otherwise identical model elements: say, one can generate hashing support whereas the other can generate serialisation.
 
-Soon we figured out that the toggle switches could be organised into "configuration" bundles -  an idea which eventually evolved into the present notion of "profiles". Profiles are named configurations which provide a defaulting mechanism for individual configurations so that they could be reused across modeling elements and, eventually, across models. That is to say, profiles stem from the very simple observation that the meta-data used for configuration is, in many cases, common to several models and therefore should be shared. In the [MDE](https://en.wikipedia.org/wiki/Model-driven_engineering) domain, these ideas have been generalised into "variability modeling", because, taken as a whole, they give you a dimension in which you can "vary" how any given modeling element is expressed - hence they are known in Dogen as "variability modeling".
+Observing its usage, we soon realised that the toggle switches provided more value when organised into "configuration sets" that modeling elements could _bind_ against, and this idea eventually morphed into the present concept of _profiles_. Profiles are named configurations which provide a defaulting mechanism for individual configurations so that they could be reused across modeling elements and, eventually, across models. That is to say, profiles stem from the very simple observation that the meta-data used for configuration is, in many cases, common to several models and therefore should be shared. In the [MDE](https://en.wikipedia.org/wiki/Model-driven_engineering) domain, these ideas have been generalised into the field of _Variability Modeling_, because, taken as a whole, they give you a dimension in which you can "vary" how any given modeling element is expressed; hence why they are also known in Dogen as "variability modeling", as we intend to be as close as possible to domain terminology.
 
 ![Dogen's profile model](https://github.com/MASD-Project/dogen/raw/master/doc/blog/images/profiles_model.png)
-_Figure 1: Snippet from "dogen.profiles" model._
+_Figure 1: Snippet from ```dogen.profiles.dia``` model._
 
 Of course, like all variability information carried in Dogen models, profiles are _themselves_ associated to models via nothing but plain old meta-data - that is, its just configuration too . A typical Dogen model contains an entry like so:
 
@@ -75,27 +74,35 @@ Of course, like all variability information carried in Dogen models, profiles ar
 
 The ```masd.variability.profile``` tells Dogen to reuse the configuration defined by the profile called ```default_profile``` - an entitty in the referenced model ```dogen.profiles``` (_c.f._ Figure 1).
 
-This approach has served us well thus far, but it carried an implicit assumption: that models are associated with  _only one profile_. As always, reality turned out to be messier than this simplistic vision. After some thinking, we realised that we have two distinct and conflicting requirements when generating Dogen's own models:
+This approach has served us well thus far, but it carried an implicit assumption: that models are associated with  _only one profile_. As always, reality turned out to be far messier than our simplistic views. After some thinking, we realised that we have not one but _two_ distinct and conflicting requirements for the generation of Dogen's own models:
 
 - **parsimony**: from a production perspective, we want to generate the smallest amount of code required so that we avoid bloating our binaries with unnecessary kruft. Thus we want our profiles to be lean and mean and our builds to be fast.
-- **coverage**: from a development and Q&A perspective, we want to test all possible facets with realistic use cases so that we can validate empirically the quality of the generated code. Dogen's own models are a great sample point for this validation, and should therefore make use of as many facets as possible. In this scenario, we don't mind slow builds and big binaries if it means a higher probability of generating correct code.
+- **coverage**: from a development and Q&A perspective, we want to test all possible facets with realistic use cases so that we can validate empirically the quality of the generated code. Dogen's own models are a great sample point for this validation, and should therefore make use of as many facets as possible. In this scenario, we don't mind slow builds and big binaries if it means a higher probability of detecting incorrect code.
 
-This problem was not entirely obvious at the start because we could afford to generate _all_ facets for _all_ models and just ignore the bloat. However, as the number of facets increased and as the number of elements in each model grew, we eventually started to ran out of build time to compile all of the generated code. We had experienced this problem in the past, leading us to separate the reference models for [C#](https://github.com/MASD-Project/csharp_ref_impl) and [C++](https://github.com/MASD-Project/cpp_ref_impl) from the core Dogen product. But now the problem was happening to Dogen _itself_, and there is nothing left to offload. Interestingly, I do not blame the "short" build times offered by the CI systems; instead, I see it as a feature, and not a bug, because the limited build time has forced us to consider very carefully the impact of growth in our code base.
+This problem was not entirely obvious at the start because we could afford to generate _all_ facets for _all_ models and just ignore the bloat. However, as the number of facets increased and as the number of elements in each model grew, we eventually started to ran out of build time to compile all of the generated code. We had experienced this problem in the past, leading us to separate the reference models for [C#](https://github.com/MASD-Project/csharp_ref_impl) and [C++](https://github.com/MASD-Project/cpp_ref_impl) from the core Dogen product. But now the problem was happening to Dogen _itself_, and there is nothing left to offload. Interestingly, I do not blame the "short" build times offered by the free CI systems; instead, I see it as a feature, not a bug, because the limited build time has forced us to consider very carefully the impact of growth in our code base.
 
 At any rate, as in the past with the reference models, we limped along yet again for a number of sprints, and resorted to "clever" hacks to allow these two conflicting requirements to coexist, such as enabling only a few facets in certain models. As a result, the CI was becoming less and less useful because you started to increasingly ignore build statuses. Not being able to trust your CI is a showstopper, of course, so this sprint we finally sat down to solve this problem in a somewhat general manner. We decided to have two separate builds, one for each use case: Nightlies for the coverage, since it runs over night and no one is waiting for them, and CI for the regular production case. And as you probably guessed by now, we needed a way to have a comprehensive profile for Nightlies that generates [everything but the kitchen sink](https://knowyourphrase.com/everything-but-the-kitchen-sink) whereas for regular CI we wanted to create the aforementioned lean and mean profiles.
 
-Variability overrides was the chosen solution, and it was implemented as follows. A new command line option was added to the Processing section, named ```--variability-override ```. The option expects a tuple of up to five elements:
+Variability overrides was the chosen solution, and it was implemented as follows. A new command line option was added to the Processing section, named ```--variability-override```:
 
-```[MODEL_ID,][ELEMENT_ID,][ATTRIBUTE_ID,]KEY,VALUE```
+```
+Processing:
+<snip>
+  --variability-override arg     CSV string with a variability override. Must
+                                 have the form of [MODEL_NAME,][ELEMENT_NAME,][ATT
+                                 RIBUTE_NAME,]KEY,VALUE
+```
 
-The first three optional elements are used to bind to the target of the override. The binding logic is somewhat contrived:
+The first three optional elements are used to bind to the target of the override (_e.g._, ```[MODEL_ID,][ELEMENT_ID,][ATTRIBUTE_ID,]```). The binding logic is somewhat contrived:
 
 1. if no model is supplied, the override applies to _any_ model, else it applies to the requested model;
 2. if no element is supplied, the override is applicable only to the model itself;
 3. if an element is supplied, the binding applies to that specific element;
 4. an attribute can only be supplied if an element is supplied. The binding will only activate if it finds a matching element and a matching attribute.
 
-To be fair, given our use case, we only really needed the first type of binding; but since we didn't want to hard-code the functionality, we came up with the simplest possible generalisation we can think of and implemented it. There are no use cases for overrides outside of profiles, so this implementation is as good as any; as soon as we have use cases, the rules can be refined. Dogen uses this new command line option like so:
+To be honest, given our use case, we only really needed the first type of binding; but since we didn't want to hard-code the functionality, we came up with the simplest possible generalisation we can think of and implemented it. There are no use cases for overrides outside of profiles, so this implementation is as good as any; as soon as we have use cases, the rules can be refined.
+
+Dogen uses this new command line option like so:
 
 ```
     if (WITH_FULL_GENERATION)
@@ -103,30 +110,70 @@ To be fair, given our use case, we only really needed the first type of binding;
             --variability-override masd.variability.profile,dogen.profiles.base.test_all_facets)
     endif()
 ```
-By supplying ```WITH_FULL_GENERATION``` for the nightlies, we generate all facets and tests for all facets, most of which are passing at present.
+By supplying ```WITH_FULL_GENERATION``` to the nightlies CMake, we then generate all facets and tests for all facets. We then build and run all of the generated code, including generated tests. Surprisingly, we did not have many issues with most generated code - with a few exceptions, which we had to ignore for now. There are also two failures which require investigation and shall be looked into next sprint.
 
 ![CDash](https://github.com/MASD-Project/dogen/raw/master/doc/blog/images/cdash_builds.png)
 _Figure 2: Continuous and nightly builds in CDash after the change._
 
+## Trace model dependencies
 
-Generate model dependency graph
+The second feature that was implemented this sprint is the addition of tracing information pertaining to model references. This work was done in the same vein as the transforms tracing (See [Sprint 12](https://github.com/MASD-Project/dogen/releases/tag/v1.0.12) for details) and reused much of the same technologies. You'll get them for free when you enable tracing via the existing flags. Dogen uses the following tracing configuration:
 
-Tracer numbering of dumped models is incorrect
+ ```
+--tracing-enabled --tracing-level detail --tracing-format org-mode --tracing-guids-enabled
+```
+as with transforms, we can generate three different types of tracing reports, depending on ```--tracing-format```:  plain, org-mode, graphviz. Plain is just a text mode representation of the references graph:
 
+![Dogen's profile model](https://github.com/MASD-Project/dogen/raw/master/doc/blog/images/plain_references_graph.png)
+_Figure 3: References graph in ```plain``` format._
 
-Creating reference cycles produces strange errors
-Error on duplicate references
+The org-mode version offers the usual interactivity available to org-mode diagrams in emacs such as folding, unfolding, querying and so on:
 
+![Dogen's profile model](https://github.com/MASD-Project/dogen/raw/master/doc/blog/images/org_mode_references_graph.png)
+_Figure 4: References graph in ```org-mode``` format._
 
-Remove master headers
-Meta-data keys are in the inverse order
+Finally, as before, the graphviz output requires processing with the dot tool before it can be visualised:
 
+```
+dot -Tpdf references_graph.dot -O
+```
+The resulting PDF can be opened with any PDF viewer. It is very useful because it gives a clear indication of the "complexity" of your model. At some point in the future, we will convert these visual "complexity" indicators into metrics that can be used to determine the "health" of a model.
+
+![Dogen's profile model](https://github.com/MASD-Project/dogen/raw/master/doc/blog/images/graphviz_references_graph.png)
+_Figure 4: References graph in ```graphviz``` format, after processing with ```dot``` tool_
+
+## Small bug fixes
+
+Several small but important bug fixes went in with this release:
+
+- **Meta-data keys are in the inverse order**: A very old but still annoying bug we had in Dogen is that meta-data keys were being processed in reverse order of entry. For example, if a model _A_ referenced models _B_ and _C_, for some unfathomable reason, would process it as _C_ and _B_. This resulted in a great deal of confusion because we assumed all references in log files, etc would first start with _B_, not _C_. This release fixes the bug, but as a result, a lot of the generated code will move places. It should be semantically equivalent, just with a different order.
+- **Tracer numbering of dumped models is incorrect**: Our traces for some reason were skipping numbers (e.g. ```000``` then ```002```, and so forth. This was very distracting when trying to analyse a problem. In addition, the previous logic of numbering the traces after a transform was abandoned; instead of having ```000``` for both the input and output of a transform, we now have ```000``` and ```001```. It was a nice thought but required a lot of complexity to implement.
+- **Creating reference cycles produces strange errors**: In the past, adding a reference cycle in a model resulted in very puzzling errors, entirely unconnected to the problem at hand. With this release we now correctly detect cycles and refuse to generate code. We do not yet have use cases for models with cycles, so for now we just took the brute force approach. Note that we also check for references to the model itself - a typo that in the past resulted in long investigations. It is now correctly detected and reported to the user.
+- **Error on duplicate references**: Similarly to cycles, adding the same reference more than once is now considered a bug and it is detected and reported to the user. The main reason why is because it normally happens as a result of copy and paste bugs, and so its best to inform users immediately.
+
+## Deprecations
+
+"Master headers" were a feature of Dogen which we haven't really used all that much. It enabled you to have a single include file for all files in a facet (_e.g._ a serialisation include, or a hashing include) and a top-level include file that included every single file in a model. These were used in the past when we had manual tests for the generated code, just to save us the effort of manually including a whole load of files. With the arrival of generated tests the feature was no longer used within Dogen. In addition, these days most C++ developers consider these "master includes" as anti-patterns, and a violation of "pay for what you use" because you invariably end up including more files than you need. Due to all of this we removed the feature from Dogen.
 
 # Development Matters
 
+In this section we cover topics that are mainly of interest if you follow Dogen development, such as details on internal stories that consumed significant resources, important events, etc. As usual, for all the gory details of the work carried out this sprint, see the [sprint log](https://github.com/MASD-Project/dogen/blob/master/doc/agile/v1/sprint_backlog_19.org).
+
 ## Significant Internal Stories
 
+Given that most stories had a user-facing impact, this sprint is short on user facing stories. There are a couple that are worth a mention though.
+
+## Recording of coding sessions
+
+Furthermore, efficiency went markedly up after adding a new tool to our arsenal of "motivational tools": the recording of coding sessions.
+
+
+
 ## Resourcing
+
+This sprint was marked by the return to "part-time" development on  Dogen. After a cadence of eight successful 2-week sprints, it was rather difficult to adjust back to the long, drawn-out process of cobbling together a release from whatever spare time one can find. As you may recall, the target for a "part-time" sprint is to clock around 80 hours worth of work over a rather unpredictable period of time. To be fair, most of Dogen has been developed in this fashion, but it is just not ideal fodder for programming. This is because part-time sprints naturally lend themselves to more fragmented work, given both the typically short-duration time slots available, and the fact that most of these are of rather dubious quality. The 22:00 slot comes particularly to mind - also fondly known known as the graveyard shift. Whilst there are advantages to _some_ resource starvation - described at length in [Nerd Food: Dogen: Lessons in Incremental Coding](https://mcraveiro.blogspot.com/2014/09/nerd-food-dogen-lessons-in-incremental.html) - it is also undoubtedly true that it is much harder to focus on complex tasks that require loading a lot of state into the brain.
+
+Nonetheless, “you go to war with the army you have, not the army you might want or wish to have at a later time”, and excuses do not write code, so one must make the most of the prevailing conditions. And, to be fair, not all was gloom and doom with Sprint 19, and much was achieved - both invisible and visible to end-users.
 
 ## Planning
 
@@ -145,7 +192,7 @@ You can download binaries from [Bintray](https://bintray.com/masd-project/main/d
 For all other architectures and/or operative systems, you will need to build Dogen from source. Source downloads are available below.
 
 Happy Modeling!
-#+end_src markdown
+#+END_SRC markdown
 
 - [[https://twitter.com/MarcoCraveiro/status/1135567734010523648][twitter]]
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6541333935140458497][linkedin]]
@@ -164,6 +211,12 @@ Time spent creating the demo and presentation.
     :END:
 
 Updates to sprint and product backlog.
+
+*** Create a profile called =untested=                                :story:
+
+We should make it really easy to spot which models have modeling
+elements that we are not testing. We should also add some comments as
+well.
 
 *** Add relational tracing support                                    :story:
 
